some refactoirng
