# backend/api/metrics_ns.py
@@ -1,4 +1,6 @@
 from flask_restx import Namespace, Resource, fields
+
+from backend.services.metrics import get_carbon_intensity, get_air_quality
 from backend.utils import get_mongo_db
 
 metrics_ns = Namespace("metrics", description="Operations related to metrics")
@@ -60,10 +62,6 @@ class PostcodeDetailMetricsResource(Resource):
     @metrics_ns.marshal_with(postcode_detail_metric_model)
     def get(self, postcode):
         """Get metrics for a postcode"""
-        # TODO: Fetch carbon intensity and air quality for the postcode
-        carbon_intensity = 0
-        air_quality = 0
-
         collection = get_mongo_db()["activities"]
         pipeline = [
             {"$match": {"postcode": postcode}},
@@ -90,7 +88,7 @@ class PostcodeDetailMetricsResource(Resource):
 
         return {
             "postcode": postcode,
-            "carbon_intensity": carbon_intensity,  # TODO: Replace with actual value
-            "air_quality": air_quality,  # TODO: Replace with actual value
+            "carbon_intensity": get_carbon_intensity(postcode)[0],
+            "air_quality": get_air_quality(postcode),
             "users": users,
         }
