# backend/models/task.py
@@ -1,5 +1,8 @@
 from attrs import define
 
+from backend.models.base import BaseModel
+from backend.utils import get_collection
+
 
 @define
 class Task:
@@ -7,3 +10,6 @@ class Task:
     name: str
     description: str
     points: int = 1
+
+
+TaskModel = BaseModel(Task, get_collection("tasks"), id_fields=["task_id"])
